[gd_scene load_steps=8 format=3 uid="uid://bhorctvfjx5s8"]

[ext_resource type="Texture2D" uid="uid://cksufs7lm7c0i" path="res://icons/button_swap_0.png" id="1_howq7"]
[ext_resource type="Script" path="res://gui/dual_color_picker.gd" id="1_lvtgu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_anxfa"]

[sub_resource type="InputEventAction" id="InputEventAction_4tnnx"]
action = &"swap_colors"

[sub_resource type="Shortcut" id="Shortcut_pujrd"]
events = [SubResource("InputEventAction_4tnnx")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5lry1"]

[sub_resource type="Shortcut" id="Shortcut_pevos"]
events = [SubResource("InputEventAction_4tnnx")]

[node name="DualColorPicker" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_lvtgu")

[node name="ColorPickerBG" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(40, 30)
layout_mode = 1
offset_left = -5.0
offset_top = -5.0
offset_right = 35.0
offset_bottom = 25.0

[node name="ColorPickerFG" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(40, 30)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -25.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 0
color = Color(1, 1, 1, 1)

[node name="SwapButton" type="Button" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_anxfa")
shortcut = SubResource("Shortcut_pujrd")
icon = ExtResource("1_howq7")
flat = true
expand_icon = true

[node name="SwapButton2" type="Button" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -25.0
offset_right = 25.0
grow_vertical = 0
rotation = 3.14159
pivot_offset = Vector2(12.5, 12.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_5lry1")
shortcut = SubResource("Shortcut_pevos")
icon = ExtResource("1_howq7")
flat = true
expand_icon = true
